# fwork-learnability

./: .env.example  .gitignore  CLAUDE.md  CONTAMINATION_ANALYSIS.md  README.md  RESULTS.md  llm-learnability-methodology.md  pyproject.toml
config/: frameworks.yaml
docs_corpus/: index.json
results/exp_20260129_142327/: 01d90c3e.json  09b7d972.json  0e738323.json  15f02d77.json  1c0f95cd.json  356d919d.json  44f2583f.json  565acbed.json  59e505b0.json  6b1fa682.json  6c064b98.json  7d267d0e.json  84031108.json  8a34b59c.json  a37871df.json  b43810b7.json  b9556259.json  bd595642.json  bf5038a6.json  ce1d5eb7.json  d3ae5e3f.json  e4526c1d.json  e8778ebd.json  f452270a.json
results/exp_20260129_233516/: 2ed2cccb.json
results/exp_20260129_234834/: 008f2129.json  0f9ef518.json  1284a283.json  1e0b11f0.json  2398a753.json  34f690ac.json  36bf6e1c.json  60b9c0c7.json  6200110b.json  631b758e.json  692fc528.json  71c5d54a.json  781d3274.json  7cf9866e.json  96609c2d.json  9b2adec3.json  b90b66c4.json  bd0b91cf.json  bf4f51c0.json  d1266362.json  de9c54ef.json  e0f1362a.json  e626f7b7.json  f3d7a011.json
results/exp_20260130_043934/: 010987a3.json  18c74fbd.json  21c46aa9.json  307366b8.json  59cdebd4.json  6500d252.json  6bb6f690.json  6bb78929.json  71345a74.json  77b54df7.json  79f44b42.json  830b8bd6.json  a7e95d7b.json  a9acae07.json  bb42e0bc.json  e52e61a3.json  (+1 more)
scripts/: __init__.py  analyze_contamination.py  fetch_docs.py  run_experiment.py  setup_venvs.py  visualize.py
src/: __init__.py
tests/: __init__.py  test_compliance.py  test_errors.py  test_extractor.py  test_task.py
visualizations/: summary.csv
(+67 files in other folders)
